--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "tdd": "cross-env NODE_ENV=test jest --watch",
         "test": "cross-env NODE_ENV=test jest",
         "lint": "eslint --fix src/ test/",
-        "deploy": "yarn docs:build && gh-pages -m \"[ci skip]\" -d docs/.vuepress/dist",
+        "deploy": "yarn docs:build && gh-pages -u \"BuptStEve <yangzhenyu2016@gmail.com>\" -m \"[ci skip]\" -d docs/.vuepress/dist",
         "pub": "npm publish"
     },
     "husky": {
@@ -38,28 +38,27 @@
         ]
     },
     "dependencies": {
-        "@vuepress/shared-utils": "^1.0.0-alpha.32",
         "markdown-it-container": "^2.0.0",
         "prismjs": "^1.15.0"
     },
     "devDependencies": {
-        "@commitlint/cli": "^7.3.2",
+        "@commitlint/cli": "^7.4.0",
         "@commitlint/config-conventional": "^7.3.1",
         "babel-eslint": "^10.0.1",
         "codecov": "^3.1.0",
         "cross-env": "^5.2.0",
         "eslint": "^5.12.1",
         "eslint-config-standard": "^12.0.0",
-        "eslint-plugin-import": "^2.15.0",
+        "eslint-plugin-import": "^2.16.0",
         "eslint-plugin-node": "^8.0.1",
         "eslint-plugin-promise": "^4.0.1",
         "eslint-plugin-standard": "^4.0.0",
         "gh-pages": "^2.0.1",
         "husky": "^1.3.1",
         "jest": "^24.0.0",
-        "lint-staged": "^8.1.0",
+        "lint-staged": "^8.1.1",
         "rimraf": "^2.6.3",
-        "vuepress": "^1.0.0-alpha.32"
+        "vuepress": "^1.0.0-alpha.34"
     },
     "keywords": [
         "vue",
