--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "vuepress-plugin-demo-code",
-    "version": "0.2.0",
-    "description": "Demo and code plugin for vuepress",
+    "version": "0.2.1",
+    "description": "📝 Demo and code plugin for vuepress",
     "main": "src/index.js",
     "scripts": {
         "docs": "vuepress dev docs --host localhost",
@@ -42,12 +42,12 @@
         "prismjs": "^1.15.0"
     },
     "devDependencies": {
-        "@commitlint/cli": "^7.4.0",
-        "@commitlint/config-conventional": "^7.3.1",
+        "@commitlint/cli": "^7.5.2",
+        "@commitlint/config-conventional": "^7.5.0",
         "babel-eslint": "^10.0.1",
         "codecov": "^3.1.0",
         "cross-env": "^5.2.0",
-        "eslint": "^5.12.1",
+        "eslint": "^5.13.0",
         "eslint-config-standard": "^12.0.0",
         "eslint-plugin-import": "^2.16.0",
         "eslint-plugin-node": "^8.0.1",
@@ -55,10 +55,10 @@
         "eslint-plugin-standard": "^4.0.0",
         "gh-pages": "^2.0.1",
         "husky": "^1.3.1",
-        "jest": "^24.0.0",
-        "lint-staged": "^8.1.1",
+        "jest": "^24.1.0",
+        "lint-staged": "^8.1.3",
         "rimraf": "^2.6.3",
-        "vuepress": "^1.0.0-alpha.34"
+        "vuepress": "^1.0.0-alpha.36"
     },
     "keywords": [
         "vue",
