--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
         "src"
     ],
     "scripts": {
+        "cov": "open coverage/lcov-report/index.html",
         "docs": "vuepress dev docs",
         "docs:build": "vuepress build docs",
-        "cov": "open coverage/lcov-report/index.html",
-        "tdd": "cross-env NODE_ENV=test jest --watch",
         "test": "cross-env NODE_ENV=test jest",
+        "test:tdd": "cross-env NODE_ENV=test jest --watch",
         "lint": "eslint --fix src/ test/",
         "deploy": "yarn docs:build && gh-pages -u \"BuptStEve <yangzhenyu2016@gmail.com>\" -m \"[ci skip]\" -d docs/.vuepress/dist",
-        "pub": "npm publish"
+        "next:pm": "npm --no-git-tag-version version preminor",
+        "next:pr": "npm --no-git-tag-version version prerelease",
+        "pub": "npm run build && npm publish",
+        "pub:n": "npm run build && npm publish --tag next"
     },
     "husky": {
         "hooks": {
@@ -24,20 +27,9 @@
         }
     },
     "lint-staged": {
-        "{src,test}/**/*.js": [
+        "{src,test}/**/*.{js,vue}": [
             "eslint --fix",
             "git add"
-        ]
-    },
-    "jest": {
-        "bail": true,
-        "clearMocks": true,
-        "transform": {
-            "^.+\\.js$": "babel-jest"
-        },
-        "collectCoverage": true,
-        "collectCoverageFrom": [
-            "src/**"
         ]
     },
     "dependencies": {
@@ -46,22 +38,30 @@
         "prismjs": "^1.15.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.2.2",
+        "@babel/preset-env": "^7.3.1",
         "@commitlint/cli": "^7.5.2",
         "@commitlint/config-conventional": "^7.5.0",
+        "babel-core": "^7.0.0-bridge.0",
         "babel-eslint": "^10.0.1",
         "codecov": "^3.1.0",
         "cross-env": "^5.2.0",
         "eslint": "^5.13.0",
         "eslint-config-standard": "^12.0.0",
+        "eslint-config-vue": "^2.0.2",
         "eslint-plugin-import": "^2.16.0",
         "eslint-plugin-node": "^8.0.1",
         "eslint-plugin-promise": "^4.0.1",
         "eslint-plugin-standard": "^4.0.0",
+        "eslint-plugin-vue": "^5.1.0",
         "gh-pages": "^2.0.1",
         "husky": "^1.3.1",
         "jest": "^24.1.0",
+        "jest-serializer-vue": "^2.0.2",
+        "jest-transform-stub": "^2.0.0",
         "lint-staged": "^8.1.3",
         "rimraf": "^2.6.3",
+        "vue-jest": "^3.0.2",
         "vuepress": "^1.0.0-alpha.36"
     },
     "keywords": [
