--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vuepress-plugin-demo-code",
-    "version": "0.3.0",
+    "version": "0.3.1",
     "description": "📝 Demo and code plugin for vuepress",
     "main": "src/index.js",
     "files": [
@@ -42,6 +42,7 @@
         "@babel/preset-env": "^7.3.1",
         "@commitlint/cli": "^7.5.2",
         "@commitlint/config-conventional": "^7.5.0",
+        "@vue/test-utils": "^1.0.0-beta.29",
         "babel-core": "^7.0.0-bridge.0",
         "babel-eslint": "^10.0.1",
         "codecov": "^3.1.0",
