--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,18 +5,8 @@
 version: 2
 jobs:
   build:
-    branches:
-      only:
-        - master
-
     docker:
-      # specify the version you desire here
       - image: circleci/node:latest
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
 
     working_directory: ~/repo
 
@@ -37,9 +27,19 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      # run tests!
-      # - run: yarn test && npx codecov
+      - run: yarn test && npx codecov
 
+  deploy:
+    branches:
+      only:
+        - master
+
+    docker:
+      - image: circleci/node:latest
+
+    working_directory: ~/repo
+
+    steps:
       # deploy
       - add_ssh_keys:
           fingerprints:
