--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,46 +3,64 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
 version: 2
+
+defaults: &defaults
+  docker:
+    - image: circleci/node:latest
+  working_directory: ~/project/repo
+
 jobs:
-  build:
-    docker:
-      - image: circleci/node:latest
-
-    working_directory: ~/repo
-
+  install:
+    <<: *defaults
     steps:
       - checkout
-
-      # Download and cache dependencies
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-
       - run: yarn install
-
       - save_cache:
           paths:
-            - node_modules
+          - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+      - persist_to_workspace:
+          root: ~/project
+          paths:
+            - repo
 
+  test:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ~/project
       - run: yarn test && npx codecov
 
   deploy:
-    branches:
-      only:
-        - master
-
-    docker:
-      - image: circleci/node:latest
-
-    working_directory: ~/repo
-
+    <<: *defaults
     steps:
-      # deploy
+      - attach_workspace:
+          at: ~/project
       - add_ssh_keys:
           fingerprints:
-            - "f4:67:c7:78:7e:41:42:dd:ef:24:63:eb:67:66:14:c0"
-
+            - f4:67:c7:78:7e:41:42:dd:ef:24:63:eb:67:66:14:c0
+      - run: ssh-keyscan -H github.com >> ~/.ssh/known_hosts
       - run: yarn deploy
+
+workflows:
+  version: 2
+  install-and-test:
+    jobs:
+      - install
+      - test:
+          requires:
+          - install
+
+  install-and-deploy:
+    jobs:
+      - install
+      - deploy:
+          requires:
+            - install
+          filters:
+            branches:
+              only: master
