--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "version": "0.3.2",
     "description": "📝 Demo and code plugin for vuepress",
     "main": "src/index.js",
-    "files": ["src"],
+    "files": [
+        "src"
+    ],
     "scripts": {
         "cov": "open coverage/lcov-report/index.html",
         "docs": "vuepress dev docs",
@@ -58,6 +60,7 @@
         "jest-serializer-vue": "^2.0.2",
         "jest-transform-stub": "^2.0.0",
         "lint-staged": "^8.1.3",
+        "markdown-it-include": "^1.0.0",
         "rimraf": "^2.6.3",
         "vue-jest": "^3.0.3",
         "vuepress": "^1.0.0-alpha.36"
