--- a/package.json
+++ b/package.json
@@ -32,39 +32,40 @@
         ]
     },
     "dependencies": {
-        "codesandbox": "2.1.1",
+        "codesandbox": "2.1.10",
         "markdown-it-container": "^2.0.0",
-        "prismjs": "^1.15.0"
+        "prismjs": "^1.17.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.3.3",
-        "@babel/preset-env": "^7.3.1",
-        "@commitlint/cli": "^7.5.2",
-        "@commitlint/config-conventional": "^7.5.0",
+        "@babel/core": "^7.6.4",
+        "@babel/preset-env": "^7.6.3",
+        "@commitlint/cli": "^8.2.0",
+        "@commitlint/config-conventional": "^8.2.0",
         "@vue/test-utils": "^1.0.0-beta.29",
+        "all-contributors-cli": "^6.9.1",
         "babel-core": "^7.0.0-bridge.0",
-        "babel-eslint": "^10.0.1",
-        "codecov": "^3.2.0",
-        "cross-env": "^5.2.0",
-        "eslint": "^5.14.1",
-        "eslint-config-standard": "^12.0.0",
+        "babel-eslint": "^10.0.3",
+        "codecov": "^3.6.1",
+        "cross-env": "^6.0.3",
+        "eslint": "^6.5.1",
+        "eslint-config-standard": "^14.1.0",
         "eslint-config-vue": "^2.0.2",
-        "eslint-plugin-import": "^2.16.0",
-        "eslint-plugin-node": "^8.0.1",
-        "eslint-plugin-promise": "^4.0.1",
-        "eslint-plugin-standard": "^4.0.0",
-        "eslint-plugin-vue": "^5.2.2",
-        "gh-pages": "^2.0.1",
-        "husky": "^1.3.1",
-        "jest": "^24.1.0",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-node": "^10.0.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-standard": "^4.0.1",
+        "eslint-plugin-vue": "^5.2.3",
+        "gh-pages": "^2.1.1",
+        "husky": "^3.0.8",
+        "jest": "^24.9.0",
         "jest-serializer-vue": "^2.0.2",
         "jest-transform-stub": "^2.0.0",
-        "lint-staged": "^8.1.4",
+        "lint-staged": "^9.4.2",
         "markdown-it-include": "^1.1.0",
-        "rimraf": "^2.6.3",
-        "vue-jest": "^3.0.3",
-        "vuepress": "^1.0.0-alpha.39",
-        "vuepress-plugin-smooth-scroll": "^0.0.3"
+        "rimraf": "^3.0.0",
+        "vue-jest": "^3.0.5",
+        "vuepress": "^1.1.0",
+        "vuepress-plugin-smooth-scroll": "^0.0.4"
     },
     "keywords": [
         "vue",
