--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vuepress-plugin-demo-code",
-    "version": "0.4.2",
+    "version": "0.5.0",
     "description": "📝 Demo and code plugin for vuepress",
     "main": "src/index.js",
     "files": [
@@ -34,7 +34,8 @@
     "dependencies": {
         "codesandbox": "2.1.10",
         "markdown-it-container": "^2.0.0",
-        "prismjs": "^1.17.1"
+        "prismjs": "^1.17.1",
+        "vuepress-plugin-code-copy": "^1.0.4"
     },
     "devDependencies": {
         "@babel/core": "^7.7.2",
