--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vuepress-plugin-demo-code",
-    "version": "0.5.0",
+    "version": "0.5.1",
     "description": "📝 Demo and code plugin for vuepress",
     "main": "src/index.js",
     "files": [
@@ -27,46 +27,45 @@
     },
     "lint-staged": {
         "{src,test}/**/*.{js,vue}": [
-            "eslint --fix",
-            "git add"
+            "eslint --fix"
         ]
     },
     "dependencies": {
-        "codesandbox": "2.1.10",
-        "markdown-it-container": "^2.0.0",
-        "prismjs": "^1.17.1",
-        "vuepress-plugin-code-copy": "^1.0.4"
+        "codesandbox": "2.1.16",
+        "markdown-it-container": "^3.0.0",
+        "prismjs": "^1.20.0",
+        "vuepress-plugin-code-copy": "^1.0.6"
     },
     "devDependencies": {
-        "@babel/core": "^7.7.2",
-        "@babel/preset-env": "^7.7.1",
-        "@commitlint/cli": "^8.2.0",
-        "@commitlint/config-conventional": "^8.2.0",
-        "@vue/test-utils": "^1.0.0-beta.29",
-        "all-contributors-cli": "^6.11.0",
+        "@babel/core": "^7.10.5",
+        "@babel/preset-env": "^7.10.4",
+        "@commitlint/cli": "^9.1.2",
+        "@commitlint/config-conventional": "^9.1.1",
+        "@vue/test-utils": "^1.0.3",
+        "all-contributors-cli": "^6.16.1",
         "babel-core": "^7.0.0-bridge.0",
-        "babel-eslint": "^10.0.3",
-        "codecov": "^3.6.1",
-        "cross-env": "^6.0.3",
-        "eslint": "^6.6.0",
-        "eslint-config-standard": "^14.1.0",
+        "babel-eslint": "^10.1.0",
+        "codecov": "^3.7.1",
+        "cross-env": "^7.0.2",
+        "eslint": "^7.5.0",
+        "eslint-config-standard": "^14.1.1",
         "eslint-config-vue": "^2.0.2",
-        "eslint-plugin-import": "^2.18.2",
-        "eslint-plugin-node": "^10.0.0",
+        "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.1",
-        "eslint-plugin-vue": "^6.0.1",
-        "gh-pages": "^2.1.1",
-        "husky": "^3.1.0",
-        "jest": "^24.9.0",
+        "eslint-plugin-vue": "^6.2.2",
+        "gh-pages": "^3.1.0",
+        "husky": "^4.2.5",
+        "jest": "^26.1.0",
         "jest-serializer-vue": "^2.0.2",
         "jest-transform-stub": "^2.0.0",
-        "lint-staged": "^9.4.3",
-        "markdown-it-include": "^1.1.0",
-        "rimraf": "^3.0.0",
-        "vue-jest": "^3.0.5",
-        "vuepress": "^1.2.0",
-        "vuepress-plugin-smooth-scroll": "^0.0.7"
+        "lint-staged": "^10.2.11",
+        "markdown-it-include": "^1.1.1",
+        "rimraf": "^3.0.2",
+        "vue-jest": "^3.0.6",
+        "vuepress": "^1.5.2",
+        "vuepress-plugin-smooth-scroll": "^0.0.9"
     },
     "keywords": [
         "vue",
