--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vuepress-plugin-demo-code",
-    "version": "0.5.2",
+    "version": "0.6.0",
     "description": "📝 Demo and code plugin for vuepress",
     "main": "src/index.js",
     "files": [
@@ -13,6 +13,7 @@
         "lint": "eslint --fix . docs/.vuepress/ --ext .js,.vue --ignore-path .gitignore",
         "test": "cross-env NODE_ENV=test jest",
         "test:tdd": "cross-env NODE_ENV=test jest --watch",
+        "release": "standard-version",
         "next:pm": "npm --no-git-tag-version version preminor",
         "next:pr": "npm --no-git-tag-version version prerelease",
         "pub": "npm publish",
@@ -63,6 +64,7 @@
         "lint-staged": "^10.2.11",
         "markdown-it-include": "^1.1.1",
         "rimraf": "^3.0.2",
+        "standard-version": "^9.3.0",
         "vue-jest": "^3.0.6",
         "vuepress": "^1.5.2",
         "vuepress-plugin-smooth-scroll": "^0.0.9"
