--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "src"
     ],
     "scripts": {
+        "prepare": "husky install",
         "cov": "open coverage/lcov-report/index.html",
         "docs": "vuepress dev docs",
         "docs:build": "vuepress build docs",
@@ -19,55 +20,48 @@
         "pub": "npm publish",
         "pub:n": "npm publish --tag next"
     },
-    "husky": {
-        "hooks": {
-            "pre-push": "npm test",
-            "pre-commit": "lint-staged",
-            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-        }
-    },
     "lint-staged": {
         "{src,test}/**/*.{js,vue}": [
             "eslint --fix"
         ]
     },
     "dependencies": {
-        "codesandbox-import-utils": "^2.1.16",
+        "codesandbox-import-utils": "^2.2.3",
         "markdown-it-container": "^3.0.0",
-        "prismjs": "^1.20.0",
+        "prismjs": "^1.23.0",
         "vuepress-plugin-code-copy": "^1.0.6"
     },
     "devDependencies": {
-        "@babel/core": "^7.10.5",
-        "@babel/preset-env": "^7.10.4",
-        "@commitlint/cli": "^9.1.2",
-        "@commitlint/config-conventional": "^9.1.1",
+        "@babel/core": "^7.14.6",
+        "@babel/preset-env": "^7.14.7",
+        "@commitlint/cli": "^12.1.4",
+        "@commitlint/config-conventional": "^12.1.4",
         "@vue/test-utils": "^1.2.1",
-        "all-contributors-cli": "^6.16.1",
+        "all-contributors-cli": "^6.20.0",
         "babel-core": "^7.0.0-bridge.0",
         "babel-eslint": "^10.1.0",
-        "codecov": "^3.7.1",
-        "cross-env": "^7.0.2",
-        "eslint": "^7.5.0",
-        "eslint-config-standard": "^14.1.1",
+        "codecov": "^3.8.2",
+        "cross-env": "^7.0.3",
+        "eslint": "^7.29.0",
+        "eslint-config-standard": "^16.0.3",
         "eslint-config-vue": "^2.0.2",
-        "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-import": "^2.23.4",
         "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-promise": "^4.2.1",
-        "eslint-plugin-standard": "^4.0.1",
-        "eslint-plugin-vue": "^6.2.2",
-        "gh-pages": "^3.1.0",
-        "husky": "^4.2.5",
-        "jest": "^26.1.0",
+        "eslint-plugin-promise": "^5.1.0",
+        "eslint-plugin-standard": "^5.0.0",
+        "eslint-plugin-vue": "^7.11.1",
+        "gh-pages": "^3.2.3",
+        "husky": "^6.0.0",
+        "jest": "^27.0.4",
         "jest-serializer-vue": "^2.0.2",
         "jest-transform-stub": "^2.0.0",
-        "lint-staged": "^10.2.11",
-        "markdown-it-include": "^1.1.1",
+        "lint-staged": "^11.0.0",
+        "markdown-it-include": "^2.0.0",
         "rimraf": "^3.0.2",
         "standard-version": "^9.3.0",
-        "vue-jest": "^3.0.6",
-        "vuepress": "^1.5.2",
-        "vuepress-plugin-smooth-scroll": "^0.0.9"
+        "vue-jest": "^3.0.7",
+        "vuepress": "^1.8.2",
+        "vuepress-plugin-smooth-scroll": "^0.0.10"
     },
     "keywords": [
         "vue",
