--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-plugin-demo-code",
-  "version": "1.0.0",
+  "version": "2.0.0-beta.0",
   "description": "📝 Demo and code plugin for vuepress",
   "main": "src/node/index.js",
   "types": "src/node/index.d.ts",
@@ -29,43 +29,46 @@
     }
   },
   "dependencies": {
-    "codesandbox-import-utils": "^2.2.3",
-    "markdown-it-container": "^3.0.0",
-    "prismjs": "^1.28.0",
-    "vuepress-plugin-code-copy": "^1.0.6"
+    "@amoutonbrady/lz-string": "^0.0.1",
+    "markdown-it-container": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/eslint-parser": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
-    "@commitlint/cli": "^12.1.4",
-    "@commitlint/config-conventional": "^12.1.4",
-    "@vue/test-utils": "^1.3.0",
+    "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.3",
+    "@babel/preset-env": "^7.16.4",
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
+    "@types/escape-html": "^1.0.1",
+    "@types/jest": "^27.4.1",
+    "@vue/compiler-sfc": "^3.2.24",
+    "@vue/test-utils": "^2.0.0-rc.17",
+    "@vue/vue3-jest": "^27.0.0-alpha.4",
+    "@vuepress/client": "^2.0.0-beta.43",
+    "@vuepress/plugin-search": "^2.0.0-beta.43",
     "all-contributors-cli": "^6.20.0",
     "babel-core": "^7.0.0-bridge.0",
-    "bumpp": "^7.1.1",
-    "codecov": "^3.8.3",
+    "babel-jest": "^27.4.2",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.32.0",
+    "eslint": "^7.12.1",
     "eslint-config-standard": "^16.0.3",
     "eslint-config-vue": "^2.0.2",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^7.20.0",
-    "gh-pages": "^3.2.3",
-    "husky": "^6.0.0",
-    "jest": "^27.5.1",
+    "eslint-plugin-vue": "^8.2.0",
+    "husky": "^7.0.4",
+    "jest": "^27.4.3",
     "jest-serializer-vue": "^2.0.2",
     "jest-transform-stub": "^2.0.0",
-    "lint-staged": "^11.2.6",
+    "lint-staged": "^12.1.2",
+    "markdown-it": "^13.0.0",
     "markdown-it-include": "^2.0.0",
     "rimraf": "^3.0.2",
-    "standard-version": "^9.3.2",
-    "vue-jest": "^3.0.7",
-    "vuepress": "^1.9.7",
+    "ts-jest": "^27.1.4",
+    "typescript": "^4.6.4",
+    "vue": "^3.2.33",
+    "vuepress": "^2.0.0-beta.43",
     "vuepress-plugin-smooth-scroll": "^0.0.10"
   },
   "keywords": [
