--- a/package.json
+++ b/package.json
@@ -33,39 +33,41 @@
     "dependencies": {
         "codesandbox-import-utils": "^2.2.3",
         "markdown-it-container": "^3.0.0",
-        "prismjs": "^1.23.0"
+        "prismjs": "^1.25.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.14.6",
-        "@babel/preset-env": "^7.14.7",
-        "@commitlint/cli": "^12.1.4",
-        "@commitlint/config-conventional": "^12.1.4",
-        "@vue/test-utils": "^1.2.1",
+        "@babel/core": "^7.16.0",
+        "@babel/eslint-parser": "^7.16.3",
+        "@babel/preset-env": "^7.16.4",
+        "@commitlint/cli": "^15.0.0",
+        "@commitlint/config-conventional": "^15.0.0",
+        "@vue/compiler-sfc": "^3.2.24",
+        "@vue/test-utils": "^2.0.0-rc.17",
+        "@vue/vue3-jest": "^27.0.0-alpha.4",
         "@vuepress/plugin-search": "^2.0.0-beta.27",
         "all-contributors-cli": "^6.20.0",
         "babel-core": "^7.0.0-bridge.0",
-        "babel-eslint": "^10.1.0",
+        "babel-jest": "^27.4.2",
         "codecov": "^3.8.2",
         "cross-env": "^7.0.3",
         "cz-conventional-changelog": "^3.3.0",
-        "eslint": "^7.29.0",
+        "eslint": "^8.4.1",
         "eslint-config-standard": "^16.0.3",
         "eslint-config-vue": "^2.0.2",
-        "eslint-plugin-import": "^2.23.4",
+        "eslint-plugin-import": "^2.25.3",
         "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-promise": "^5.1.0",
+        "eslint-plugin-promise": "^5.2.0",
         "eslint-plugin-standard": "^5.0.0",
-        "eslint-plugin-vue": "^7.11.1",
+        "eslint-plugin-vue": "^8.2.0",
         "gh-pages": "^3.2.3",
-        "husky": "^6.0.0",
-        "jest": "^27.0.4",
+        "husky": "^7.0.4",
+        "jest": "^27.4.3",
         "jest-serializer-vue": "^2.0.2",
         "jest-transform-stub": "^2.0.0",
-        "lint-staged": "^11.0.0",
+        "lint-staged": "^12.1.2",
         "markdown-it-include": "^2.0.0",
         "rimraf": "^3.0.2",
-        "standard-version": "^9.3.0",
-        "vue-jest": "^3.0.7",
+        "standard-version": "^9.3.2",
         "vuepress": "^2.0.0-beta.27",
         "vuepress-plugin-smooth-scroll": "^0.0.10"
     },
