--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vuepress-plugin-demo-code",
     "version": "1.0.0-1",
     "description": "📝 Demo and code plugin for vuepress",
-    "main": "src/index.js",
+    "main": "src/node/index.js",
     "files": [
         "src"
     ],
@@ -32,6 +32,7 @@
     },
     "dependencies": {
         "codesandbox-import-utils": "^2.2.3",
+        "escape-html": "^1.0.3",
         "markdown-it-container": "^3.0.0",
         "prismjs": "^1.25.0"
     },
@@ -41,10 +42,11 @@
         "@babel/preset-env": "^7.16.4",
         "@commitlint/cli": "^15.0.0",
         "@commitlint/config-conventional": "^15.0.0",
+        "@types/jest": "^27.4.1",
         "@vue/compiler-sfc": "^3.2.24",
         "@vue/test-utils": "^2.0.0-rc.17",
         "@vue/vue3-jest": "^27.0.0-alpha.4",
-        "@vuepress/plugin-search": "2.0.0-beta.27",
+        "@vuepress/plugin-search": "^2.0.0-beta.37",
         "all-contributors-cli": "^6.20.0",
         "babel-core": "^7.0.0-bridge.0",
         "babel-jest": "^27.4.2",
@@ -68,7 +70,8 @@
         "markdown-it-include": "^2.0.0",
         "rimraf": "^3.0.2",
         "standard-version": "^9.3.2",
-        "vuepress": "2.0.0-beta.27",
+        "ts-jest": "^27.1.4",
+        "vuepress": "^2.0.0-beta.37",
         "vuepress-plugin-smooth-scroll": "^0.0.10"
     },
     "keywords": [
