--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vuepress-plugin-demo-code",
-    "version": "1.0.0-2",
+    "version": "1.0.0-3",
     "description": "📝 Demo and code plugin for vuepress",
     "main": "src/node/index.js",
     "files": [
@@ -31,10 +31,8 @@
         }
     },
     "dependencies": {
-        "codesandbox-import-utils": "^2.2.3",
-        "escape-html": "^1.0.3",
-        "markdown-it-container": "^3.0.0",
-        "prismjs": "^1.25.0"
+        "@amoutonbrady/lz-string": "^0.0.1",
+        "markdown-it-container": "^3.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.16.0",
@@ -42,11 +40,12 @@
         "@babel/preset-env": "^7.16.4",
         "@commitlint/cli": "^15.0.0",
         "@commitlint/config-conventional": "^15.0.0",
+        "@types/escape-html": "^1.0.1",
         "@types/jest": "^27.4.1",
         "@vue/compiler-sfc": "^3.2.24",
         "@vue/test-utils": "^2.0.0-rc.17",
         "@vue/vue3-jest": "^27.0.0-alpha.4",
-        "@vuepress/plugin-search": "^2.0.0-beta.37",
+        "@vuepress/plugin-search": "^2.0.0-beta.38",
         "all-contributors-cli": "^6.20.0",
         "babel-core": "^7.0.0-bridge.0",
         "babel-jest": "^27.4.2",
@@ -71,7 +70,7 @@
         "rimraf": "^3.0.2",
         "standard-version": "^9.3.2",
         "ts-jest": "^27.1.4",
-        "vuepress": "^2.0.0-beta.37",
+        "vuepress": "^2.0.0-beta.38",
         "vuepress-plugin-smooth-scroll": "^0.0.10"
     },
     "keywords": [
