--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "vuepress-plugin-demo-code",
-    "version": "0.6.0",
+    "version": "0.7.0",
     "description": "📝 Demo and code plugin for vuepress",
     "main": "src/index.js",
+    "types": "src/index.d.ts",
     "files": [
         "src"
     ],
