--- a/package.json
+++ b/package.json
@@ -15,11 +15,8 @@
         "lint": "eslint --fix . docs/.vuepress/ --ext .js,.vue --ignore-path .gitignore",
         "test": "cross-env NODE_ENV=test jest",
         "test:tdd": "cross-env NODE_ENV=test jest --watch",
-        "release": "standard-version -n",
-        "next:pm": "npm --no-git-tag-version version preminor",
-        "next:pr": "npm --no-git-tag-version version prerelease",
-        "pub": "npm publish",
-        "pub:n": "npm publish --tag next"
+        "release": "HUSKY=0 standard-version",
+        "pub:n": "HUSKY=0 bumpp --commit 'chore: v%s' --push && npm publish --tag next"
     },
     "lint-staged": {
         "{src,test}/**/*.{js,vue}": [
@@ -46,6 +43,7 @@
         "all-contributors-cli": "^6.20.0",
         "babel-core": "^7.0.0-bridge.0",
         "babel-eslint": "^10.1.0",
+        "bumpp": "^7.1.1",
         "codecov": "^3.8.3",
         "cross-env": "^7.0.3",
         "cz-conventional-changelog": "^3.3.0",
