--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,9 @@ jobs:
         env:
           CONVENTIONAL_GITHUB_RELEASER_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
+      - name: Install Dependencies
+        run: pnpm install
+
       - name: Publish to NPM
         run: pnpm publish --access public --no-git-checks
         env:
