--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@vue/test-utils": "^1.3.0",
     "all-contributors-cli": "^6.20.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.1.0",
     "bumpp": "^7.1.1",
     "codecov": "^3.8.3",
     "cross-env": "^7.0.3",
