--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "allowJs": true,
+        "jsx": "preserve",
         "baseUrl": ".",
         "paths": {
             "@/*": ["./src/*"]
